# mysteryNumber

./: .env  .gitignore  README.md  app.py  package-lock.json  package.json  pyproject.toml
static/src/css/: input.css
templates/: bestscore.html  index.html
