[project]
name = "flaskgpt"
version = "0.1.0"
description = "ChatGPT Clone using Flask"
authors = [
    {name = "Enzo"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "openai (>=1.76.2,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
